@@ -97,6 +97,7 @@ FLOAT_SETT_ASSIGN("MacroTiltDownLimit", macControl->tiltDownLimit)
 FLOAT_SETT_ASSIGN("MacroMontErrorLimit", macControl->montErrorLimit)
 FLOAT_SETT_ASSIGN("MacroISLimit", macControl->ISlimit)
 INT_SETT_GETSET("ScriptIndentSize", mWinApp->mMacroProcessor->, AutoIndentSize)
+BOOL_SETT_GETSET("RestoreMacroEditors", mWinApp->mMacroProcessor->, RestoreMacroEditors)
 
 #endif
 #ifdef SET_TEST_SECT2
