@@ -83,6 +83,7 @@ hid_settings_readagain					= SerialEM.chm::/html\menu_settings.htm#hid_settings_
 hid_settings_save								= SerialEM.chm::/html\menu_settings.htm#hid_settings_save
 hid_settings_saveas							= SerialEM.chm::/html\menu_settings.htm#hid_settings_saveas
 hid_settings_close							= SerialEM.chm::/html\menu_settings.htm#hid_settings_close
+hid_settings_discardonexit  		= SerialEM.chm::/html\menu_settings.htm#hid_settings_discardonexit
 hid_settings_readdefaults				= SerialEM.chm::/html\menu_settings.htm#hid_settings_readdefaults
 hid_settings_autosave						= SerialEM.chm::/html\menu_settings.htm#hid_settings_autosave
 hid_settings_setaproperty				= SerialEM.chm::/html\menu_settings.htm#hid_settings_setaproperty
@@ -249,6 +250,7 @@ hid_macro_run18									= SerialEM.chm::/html\menu_script.htm#hid_macro_run1
 hid_macro_run19									= SerialEM.chm::/html\menu_script.htm#hid_macro_run1
 hid_macro_run20									= SerialEM.chm::/html\menu_script.htm#hid_macro_run1
 hid_script_setindentsize				= SerialEM.chm::/html\menu_script.htm#hid_script_setindentsize
+hid_script_openeditorsonstart 	= SerialEM.chm::/html\menu_script.htm#hid_script_openeditorsonstart
 hid_script_runonecommand				= SerialEM.chm::/html\menu_script.htm#hid_script_runonecommmand
 hid_script_clearpersistentvars  = SerialEM.chm::/html\menu_script.htm#hid_script_clearpersistentvars
 hid_process_setintensity				= SerialEM.chm::/html\menu_tasks.htm#hid_process_setintensity
