@@ -38,6 +38,11 @@
       the button, prefixed by '-&gt;', so that you can know what magnification will be 
       reached.&nbsp; The '-&gt;' will stay until the magnification change is achieved.</p>
     <p>
+      On FEI scopes in STEM mode, it is not possible for SerialEM to switch between LM 
+      and nonLM magnifications, so this button will not work at that boundary.&nbsp; 
+      If necessary, you can go out of STEM, change magnification to enter or leave LM, 
+      and then return to STEM mode.</p>
+    <p>
       <b>Intensity with Mag</b></p>
     <p>
       Select this option to have the program change intensity when you change 
