@@ -11,7 +11,7 @@
       }
       .style2
       {
-        width: 446px;
+        width: 483px;
       }
   --></style>
   </HEAD>
@@ -79,6 +79,11 @@
         <TR VALIGN="top">
           <TD class="style1"><A HREF="#hid_macro_verbose">Set Indent Size</A></TD>
           <TD class="style2">Sets number of spaces for automatic indenting in editor.</TD>
+        </TR>
+        <TR VALIGN="top">
+          <TD class="style1"><a href="#hid_script_openeditorsonstart">Open Editors on Start</a></TD>
+          <TD class="style2">Toggles whether editing windows will be restored on program 
+            startup</TD>
         </TR>
         <TR VALIGN="top">
           <TD class="style1"><A HREF="#hid_macro_verbose">Verbose</A></TD>
@@ -172,6 +177,11 @@
       spacing is added at the first line of a block starting with IF, LOOP, ELSE, or 
       Function, and taken away when such a block ends.&nbsp; Enter 0 to prevent 
       auto-indenting.</p>
+    <P><A NAME="hid_script_openeditorsonstart"></A><B>Open Editors on Start command (Script menu)</B></P>
+    <p>Use this command to control whether editor windows are restored to their last 
+      state when the program is restarted.&nbsp; In addition, if this option is selected, 
+      editor windows will be opened or closed when a new settings file is read to 
+      match the state when those settings were saved.</p>
     <P><A NAME="hid_macro_verbose"></A><B>Verbose command (Script menu)</B></P>
    <P>Use this command to set the initial value of the verbose option when a script is 
         started. With this option on, each script command will be echoed to the log 
